Write a bit docs abount gradle-based projects support.